force-app/main/default/objects/Certification_Criteria_Setup__c/Certification_Criteria_Setup__c.object-meta.xml
<CustomObject>
    <label>Competency Criteria Setup</label>
    <nameField>
        <displayFormat>CC-{0000000}</displayFormat>
        <label>Competency Criteria Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competency Criteria Setups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>