force-app/main/default/objects/Certification_Criteria_Setup__c/fields/Certification_Criteria_Name__c.field-meta.xml
<CustomField>
    <fullName>Certification_Criteria_Name__c</fullName>
    <label>Competency Criteria Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Sales Training</fullName>
            </value>
            <value>
                <fullName>Second Sales Training</fullName>
            </value>
            <value>
                <fullName>Third Sales Training</fullName>
            </value>
            <value>
                <fullName>Fourth Sales Training</fullName>
            </value>
            <value>
                <fullName>First Technical Training</fullName>
            </value>
            <value>
                <fullName>Second Technical Training</fullName>
            </value>
            <value>
                <fullName>Third Technical Training</fullName>
            </value>
            <value>
                <fullName>Fourth Technical Training</fullName>
            </value>
            <value>
                <fullName>Demo Unit</fullName>
            </value>
            <value>
                <fullName>General Training Criteria</fullName>
            </value>
            <value>
                <fullName>Approved Business Plan</fullName>
            </value>
            <value>
                <fullName>Contractual Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>