force-app/main/default/objects/Certification_Criteria_Setup__c/fields/Certification_Criteria_Order__c.field-meta.xml
<CustomField>
    <fullName>Certification_Criteria_Order__c</fullName>
    <label>Competency Criteria Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>