force-app/main/default/objects/Certification_Criteria_Setup__c/fields/Certification_Criteria_Value__c.field-meta.xml
<CustomField>
    <fullName>Certification_Criteria_Value__c</fullName>
    <inlineHelpText>Please enter a valid Demo Unit Type EQL Demo or KACE Demo or Compellent Demo or Networking Demo for Demo Unit Criteria.
Please enter Y for Yes and N for No for Approved Business Plan and Contractual Agreement. Note that the entries are case sensitive</inlineHelpText>
    <label>Competency Criteria Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>