force-app/main/default/objects/Certification_Criteria_Setup__c/fields/Certification_Requirement_Setup__c.field-meta.xml
<CustomField>
    <fullName>Certification_Requirement_Setup__c</fullName>
    <label>Compentency Requirement Setup</label>
    <referenceTo>Certification_Requirement_Setup__c</referenceTo>
    <relationshipLabel>Competency Criteria Setups</relationshipLabel>
    <relationshipName>Certification_Criteria_Setups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>