force-app/main/default/objects/Certification_Criteria_Setup__c/fields/Criteria_Value_Ids__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Value_Ids__c</fullName>
    <description>Hidden field to store Course Ids for respective Certification Criteria Value.</description>
    <inlineHelpText>For courses that needs AND between courses , replace OR with AND . Ensure there is a space before and after AND. DON&apos;T EDIT ANY OTHER VALUES ON THE FIELD.</inlineHelpText>
    <label>Criteria Value Ids</label>
    <type>TextArea</type>
</CustomField>