force-app/main/default/objects/Certification_Criteria_Setup__c/fields/Criteria_Value_Ids_PostFixFormat__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Value_Ids_PostFixFormat__c</fullName>
    <description>Stores Criteria Value Ids in Post-fix format. Used in Certification evaluation logic.</description>
    <label>Criteria Value Ids_PostFixFormat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>