force-app/main/default/objects/Certification_Criteria_Setup__c/fields/Number_of_Demo_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Demo_Units__c</fullName>
    <inlineHelpText>Enter a valid positive number</inlineHelpText>
    <label>Number of Demo Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>