force-app/main/default/objects/Certification_Criteria_Setup__c/validationRules/ApprovedBusinessPlan_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ApprovedBusinessPlan_Validation</fullName>
    <active>true</active>
    <description>If Competency Criteria Name has  Approved Business Plan then the Compentency Critieria Value can only be “Y” or “N”</description>
    <errorConditionFormula>IF(AND( ISPICKVAL( Certification_Criteria_Name__c , &quot;Approved Business Plan&quot;) ,
  NOT(OR(Certification_Criteria_Value__c
  = &quot;Y&quot;, Certification_Criteria_Value__c
  =&quot;N&quot;))) ,true,false)</errorConditionFormula>
    <errorDisplayField>Certification_Criteria_Value__c</errorDisplayField>
    <errorMessage>Please enter Y for Yes and N for No</errorMessage>
</ValidationRule>