force-app/main/default/objects/Certification_Criteria_Setup__c/validationRules/CertificationCriteria_Condition_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>CertificationCriteria_Condition_Valid</fullName>
    <active>true</active>
    <description>If Certification Criteria Name has First Sales Training / Second Sales Training / First Technical Training / Second Technical Training then   Condition should not be Null</description>
    <errorConditionFormula>IF(AND( OR(ISPICKVAL(Certification_Criteria_Name__c , &quot;First Sales Training&quot;),
  ISPICKVAL(Certification_Criteria_Name__c ,&quot;Second Sales Training&quot;),
  ISPICKVAL(Certification_Criteria_Name__c ,  &quot;First Technical Training&quot;) ,
  ISPICKVAL(Certification_Criteria_Name__c ,&quot;Second Technical Training&quot;))
  ,   ISPICKVAL( Condition__c , &apos;&apos;)  ), true, false)</errorConditionFormula>
    <errorDisplayField>Condition__c</errorDisplayField>
    <errorMessage>The Field, &quot;Condition&quot; should not be Null.</errorMessage>
</ValidationRule>