force-app/main/default/objects/Certification_Criteria_Setup__c/validationRules/CertificationCriteria_CriteriaName_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>CertificationCriteria_CriteriaName_Valid</fullName>
    <active>true</active>
    <description>Competency Criteria Name should not be null</description>
    <errorConditionFormula>ISBLANK(TEXT( Certification_Criteria_Name__c ))</errorConditionFormula>
    <errorDisplayField>Certification_Criteria_Name__c</errorDisplayField>
    <errorMessage>Select a Competency Criteria</errorMessage>
</ValidationRule>