force-app/main/default/objects/Certification_Criteria_Setup__c/validationRules/ContractualAgreement_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ContractualAgreement_Validation</fullName>
    <active>true</active>
    <description>If Competency Criteria Name has  Contractual Agreement then the Competency Criteria Value can only be “Y” or “N”</description>
    <errorConditionFormula>IF(AND( ISPICKVAL( Certification_Criteria_Name__c , &quot;Contractual Agreement&quot;), NOT(OR(Certification_Criteria_Value__c
  = &quot;Y&quot;, Certification_Criteria_Value__c
  =&quot;N&quot;))) ,true,false)</errorConditionFormula>
    <errorDisplayField>Certification_Criteria_Value__c</errorDisplayField>
    <errorMessage>Please enter Y for Yes and N for No</errorMessage>
</ValidationRule>