force-app/main/default/objects/Certification_Criteria_Setup__c/validationRules/DemoUnit_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>DemoUnit_validation</fullName>
    <active>false</active>
    <description>If Competency Criteria Name has  Demo Unit then the Competency Critieria Value can only be EQL Demo or KACE Demo or Compellent Demo</description>
    <errorConditionFormula>IF(AND( ISPICKVAL( Certification_Criteria_Name__c , &quot;Demo Unit&quot;) ,
  NOT(OR(Certification_Criteria_Value__c
  = &quot;EQL Demo&quot;, Certification_Criteria_Value__c
  =&quot;KACE Demo&quot;,Certification_Criteria_Value__c
  = &quot;Compellent Demo&quot;, Certification_Criteria_Value__c  = &quot;Networking Demo&quot;))) ,true,false)</errorConditionFormula>
    <errorDisplayField>Certification_Criteria_Value__c</errorDisplayField>
    <errorMessage>Please enter a valid Demo Unit Type EQL Demo or KACE Demo or Compellent Demo or Networking Demo.</errorMessage>
</ValidationRule>