force-app/main/default/objects/Certification_Criteria_Setup__c/validationRules/NumberDemoUnit_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NumberDemoUnit_Validation</fullName>
    <active>true</active>
    <description>Number of Demo Units can only be a positive numeric value.</description>
    <errorConditionFormula>IF(AND(ISPICKVAL(Certification_Criteria_Name__c , &quot;Demo Unit&quot;),OR(Number_of_Demo_Units__c &lt;= 0,ISBLANK(Number_of_Demo_Units__c))), true,false)</errorConditionFormula>
    <errorDisplayField>Number_of_Demo_Units__c</errorDisplayField>
    <errorMessage>Please enter a valid postive Number.</errorMessage>
</ValidationRule>