force-app/main/default/objects/Certification_Criteria_Setup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Certification_Requirement_Setup__c</columns>
    <columns>NAME</columns>
    <columns>Certification_Criteria_Order__c</columns>
    <columns>Certification_Criteria_Name__c</columns>
    <columns>Certification_Criteria_Value__c</columns>
    <columns>Condition__c</columns>
    <columns>Number_of_Demo_Units__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>